basic/combined.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "devopsrep-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "devopsrep"
  template:
    metadata:
      labels:
        app: "devopsrep"
    spec:
      containers:
        - image: "nginx:alpine"
          name: nginx
          ports:
            - containerPort: 80 

---
apiVersion: v1
kind: Service
metadata:
  name: "devopsrep-service"
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: "devopsrep"

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "devopsrep-ingress"
spec:
  rules:
    - host: "devopsrep.blah.com"
      http:
        paths:
          - backend:
              serviceName: "devopsrep-service"
              servicePort: 80
            path: /
