basic/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "devopsrep-ingress"
spec:
  rules:
    - host: "devopsrep.blah.com"
      http:
        paths:
          - backend:
              serviceName: "devopsrep-service"
              servicePort: 80
            path: /
